welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:21: error: not found: value setPosition
  	setPosition(getPosition().x, getPosition().y - 1)
        ^ColumnByColumn:21: error: not found: value getPosition
  	setPosition(getPosition().x, getPosition().y - 1)
                    ^ColumnByColumn:21: error: not found: value getPosition
  	setPosition(getPosition().x, getPosition().y - 1)
                                     ^