welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.code
def fin():Boolean = 
{
  if (!estDosMur())
  	return false
  
  var ok = false
  droite()
  
  if (estFaceMur())
  	ok = true
  
  gauche()
  return true
}

override def run() {
  var idCase = 0
  
  while (!fin())
  {
  	ecritMessage("" + idCase)
  	setPosition(getPosition().x, getPosition().y - 1)
  }
}